<?xml version="1.0"?>
<package format="2">
  <name>rostest_example</name>
  <version>0.0.0</version>
  <description>The rostest_example package</description>

  <maintainer email="michal@todo.todo">michal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>
</package>
